sfdx-source/force-app/main/default/objects/Submarket__c/Submarket__c.object-meta.xml
<CustomObject>
    <description>LEM-1850: Table to handle submarket pricing data from Figment</description>
    <label>Submarket</label>
    <nameField>
        <label>Submarket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submarkets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>