sfdx-source/force-app/main/default/objects/Submarket__c/fields/GearsetExternalId__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalId__c</fullName>
    <externalId>true</externalId>
    <label>GearsetExternalId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>