sfdx-source/force-app/main/default/objects/Submarket__c/fields/Premium_Commission_Floor__c.field-meta.xml
<CustomField>
    <fullName>Premium_Commission_Floor__c</fullName>
    <description>LEM-1850</description>
    <label>Premium Commission Floor</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>