sfdx-source/force-app/main/default/objects/Submarket__c/fields/Service_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Rate__c</fullName>
    <description>LEM-1850</description>
    <label>Service Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>