sfdx-source/force-app/main/default/objects/Submarket__c/fields/Submarket_ID__c.field-meta.xml
<CustomField>
    <fullName>Submarket_ID__c</fullName>
    <description>LEM-1850</description>
    <label>Submarket ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>