sfdx-source/force-app/main/default/objects/Submarket__c/fields/Submarket_Premium_Tier__c.field-meta.xml
<CustomField>
    <fullName>Submarket_Premium_Tier__c</fullName>
    <description>LEM-1850</description>
    <label>Submarket Premium Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>